fixed hamburger menu vertical align

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -479,7 +479,7 @@ li:hover {
 
 .menu-wrap .toggler {
     position: absolute;
-    top: 10px;
+    top: 8px;
     left: 25px;
     z-index: 2;
     cursor: pointer;
@@ -490,7 +490,7 @@ li:hover {
 
 .menu-wrap .hamburger {
     position: absolute;
-    top: 5px;
+    top: 3px;
     left: 20px;
     z-index: 1;
     width: 60px;
